[project]
name = "fsm-core-py-db"
version = "0.1.0"
description = "Python PostgreSQL client for FSM Core — mirrors fsm-core-db"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fsm_core_db"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
