[project]
name = "fsm-core-py-fastapi"
version = "0.1.0"
description = "FSM Core Python FastAPI server — mirrors fsm-core-ts-hono-deno"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "scalar-fastapi>=0.1.0",
    "supabase>=2.5.0",
    "python-json-logger>=2.0.7",
    "fsm-core-py-db",
    "fsm-py-compiler",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
fsm-core-py-db = { path = "../fsm-core-py-db", editable = true }
fsm-py-compiler = { path = "../../packages/fsm-compiler-py", editable = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
